--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,36 @@
+
+/* NavBar */
+
+nav {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 2rem;
+    color: var(--primary-color);
+}
+
+.navLink {
+    list-style: none;
+}
+
+.links:nth-child(1) {
+    padding-right: 4.5rem;
+}
+
+.links {
+    text-decoration: none;
+    color: var(--text-color);
+    padding-bottom: 4rem;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
 /* Hero section */
 .Home {
-    background: url("./cover.png");
+    background: url("./Images/cover.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -42,14 +72,11 @@
     margin-bottom: 2.5rem;
 }
 
-.btn {
+.btnLink {
     background: var(--primary-color);
     color: #ffffff;
     padding: 1rem .8rem;
     border-radius: .3rem;
-}
-
-.btnLink {
     text-decoration: none;
     color: #ffffff;
 }
