made the hero section mobile responsive

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,10 +1,10 @@
+/* Declearing Variables */
 :root {
     --primary-color: #32E0C4;
     --text-color: #2E2626;
     --dark-color: #393E46;
     --background-color: rgba(118, 234, 215, 0.05);
-};
-
+}
 /* NavBar */
 
 nav {
@@ -34,6 +34,22 @@ nav {
     font-weight: bold;
 }
 
-.links:hover {
-    color: var(--primary-color);
+/* Media Queries */
+
+@media screen and (max-width:778px) {
+    nav {
+        padding-top: 1rem;
+    }
+
+    .logo {
+        width: 60px;
+    }
+
+    .links:nth-child(1) {
+        padding-right: 2.5rem;
+    }
+    
+    .links {
+        font-size: 1rem;
+    }
 }
