--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,5 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: var(--text-color);
     font-size: var(--font-size);
+    background: var(--background-color);
 }
