--- a/src/Pages/Home/HowWeWork/HowWeWork.css
+++ b/src/Pages/Home/HowWeWork/HowWeWork.css
@@ -95,11 +95,10 @@
     }
     .column .title {
         padding-top: 40px;
+        padding-bottom: 0px;
         line-height: 120.4%;
     }
     .column:hover {
         border-color: rgb(89, 245, 58);
     }
 }
-
-@media screen and (max-width: 660px) {}
