--- a/src/Pages/Home/About/About.css
+++ b/src/Pages/Home/About/About.css
@@ -31,7 +31,8 @@
     text-align: left;
 }
 
-.SubHeading, .Heading {
+.SubHeading,
+.Heading {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
@@ -42,7 +43,7 @@
 }
 
 .AboutText {
-    --font-size : .9rem;
+    --font-size: .9rem;
     width: 80%;
     font-size: var(--font-size);
     line-height: calc(1.5 * var(--font-size));
@@ -53,5 +54,45 @@
 }
 
 .PaymentGif {
-    height: 657px;
+    height: 523px;
+}
+
+@media screen and (max-width: 1082px) {
+    .AboutWrapper {
+        width: 80%;
+        margin: auto;
+        margin-top: 5%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+        grid-template-areas:
+            "AboutDes"
+            "AboutGif"
+        ;
+    }
+
+    .AboutDes {
+        grid-area: AboutDes;
+    }
+
+    .AboutGif {
+        grid-area: AboutGif;
+    }
+
+    .PaymentGif {
+        height: 757px;
+    }
+
+    .AboutDes {
+        text-align: justify;
+        align-self: center;
+        justify-self: center;
+    }
+}
+
+@media screen and (max-width: 605px) { 
+    #About {
+        overflow: visible;
+        overflow-x: hidden;
+    }
 }
