--- a/src/Pages/Home/HowWeWork/HowWeWork.css
+++ b/src/Pages/Home/HowWeWork/HowWeWork.css
@@ -23,23 +23,24 @@
     justify-content: space-evenly;
 }
 
+.btn-flat {
+    text-decoration: none;
+}
+
 .column {
     background-color: rgb(251, 254, 255);
     height: 470px;
     width: 350px;
     position: relative;
     border-radius: 12px;
-    box-shadow: inset 0 0 16px rgb(230, 234, 235);
+    box-shadow: inset 0 0 14px rgb(233, 236, 238);
     cursor: pointer;
-    border: 2px solid rgb(230, 234, 235);
+    border: 1px solid rgb(241, 247, 248);
 }
 
 .column:hover {
-    border-color: rgb(47, 142, 231);
-}
+    border-color: rgb(116, 247, 252);
 
-.column.active {
-    background-color: rgb(219, 223, 223);
 }
 
 .column .title {
@@ -49,9 +50,13 @@
     font-size: 23px;
     line-height: 132.4%;
     text-transform: uppercase;
-    color: #76ead7;
+    color: rgb(90, 89, 89);
     text-align: left;
     padding: 50px 50px;
+}
+
+.column .title:hover{
+    color: rgb(116, 247, 252);
 }
 
 .column p {
@@ -80,12 +85,11 @@
 
 @media screen and (max-width: 1040px) {
     .how-we-work-section h2 {
-        font-size: 30px;
+        font-size: 29px;
         line-height: 155.4%;
         padding-top: 35px;
         padding-bottom: 1px;
     }
-
     .container {
         width: 90%;
         height: 90%;
@@ -95,23 +99,22 @@
         justify-content: space-between;
         margin-left: 22px;
     }
-
     .column {
         height: 220px;
         width: 300px;
     }
-
     .column .image {
         background-image: none;
     }
-
     .column .title {
         padding-top: 38px;
         padding-bottom: 1px;
         line-height: 120.4%;
     }
-
     .column:hover {
-        border-color: rgb(89, 245, 58);
+        border-color: rgb(132, 245, 253);
+    }.column .title:hover{
+        color: rgb(116, 247, 252);
     }
+    
 }
