--- a/src/Pages/Home/About/About.css
+++ b/src/Pages/Home/About/About.css
@@ -1,5 +1,6 @@
 #About {
-    --about-bg: #F7FFFF;
+    --about-bg: #f7ffff;
+
     background: var(--about-bg);
     width: 100%;
     height: 100vh;
@@ -43,7 +44,8 @@
 }
 
 .AboutText {
-    --font-size: .9rem;
+    --font-size: 0.9rem;
+
     width: 80%;
     font-size: var(--font-size);
     line-height: calc(1.5 * var(--font-size));
@@ -65,14 +67,14 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 10px;
-        grid-template-areas:
-            "AboutDes"
-            "AboutGif"
-        ;
+        grid-template-areas: "AboutDes""AboutGif";
     }
 
     .AboutDes {
         grid-area: AboutDes;
+        text-align: justify;
+        align-self: center;
+        justify-self: center;
     }
 
     .AboutGif {
@@ -81,12 +83,6 @@
 
     .PaymentGif {
         height: 757px;
-    }
-
-    .AboutDes {
-        text-align: justify;
-        align-self: center;
-        justify-self: center;
     }
 }
 
@@ -107,6 +103,7 @@
     .SubHeading {
         font-size: 1.2rem;
     }
+
     .AboutText {
         width: 100%;
     }
@@ -116,7 +113,7 @@
     }
 }
 
-@media screen and (max-width: 403px) { 
+@media screen and (max-width: 403px) {
     .Heading {
         font-size: 1.2rem;
         line-height: 1;
@@ -127,4 +124,3 @@
         font-size: 1rem;
     }
 }
-
