fixing codasy flags

--- a/src/Pages/Home/Hero/Hero.css
+++ b/src/Pages/Home/Hero/Hero.css
@@ -44,7 +44,7 @@
 
 .btnLink {
     background: var(--primary-color);
-    color: #ffffff;
+    color: #fff;
     padding: 1rem 0.8rem;
     border-radius: 0.3rem;
     text-decoration: none;
