--- a/src/Pages/Home/Footer/Footer.css
+++ b/src/Pages/Home/Footer/Footer.css
@@ -1,12 +1,13 @@
 #footer {
   background: #f1faf9dc;
-  padding: 10px;
+  padding: 15px;
 }
 
 .icons {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 9%;
 }
 
 .logos {
@@ -22,31 +23,55 @@
 
 .title {
   text-align: center;
+  margin: 25px auto;
+}
+
+.subscribe-header {
+  text-align: center;
+  margin: 65px auto 15px auto;
 }
 
 .newsletter {
   display: inline-block;
-  margin: 0 35%;
+  margin: 0 35% 65px 35%;
 }
 
 #mail {
-  padding: 5px;
-  max-width: 300px;
-  padding-right: 30px;
+  position: absolute;
+  padding: 10px;
+  min-width: 25%;
+  border: 1px solid  #333333;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #send {
-  padding: 5px;
-  right: 15px;
+  position: absolute;
+  padding: 10px;
+  background: #32E0C4;
+  color: #fff;
+  border: 2px solid #32E0C4;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  left: 60.9%;
 }
 
 #copyright {
-  text-align: center;
+  padding: 5px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:space-between;
 }
 
 .link {
   margin: 0 3px;
   color: rgb(0, 225, 255);
+}
+
+.f-r {
+  float: right;
 }
 
 .link:hover {
