--- a/src/Components/SideLinks/SideLinks.css
+++ b/src/Components/SideLinks/SideLinks.css
@@ -1,7 +1,9 @@
 .SideLinks{
-  margin-top: 30px;
+  margin-top: 8%;
+  margin-right: 35px;
   float: right;
 }
+
 .sideLinkIcons {
   padding: 20px;
   display: flex;
@@ -12,7 +14,7 @@
 .icon {
   height: 38px;
   width: 38px;
-  margin: 10px 0px 10px 35px;
+  margin: 10% 0px 10% 0%;
   background-color: #fff;
   border-radius: 50%;
   transition: width 2s height 2s linear;
@@ -25,8 +27,6 @@
 }
 
 #cusor {
-  width:150px;
-  height: 100px;
   animation: swing 1s infinite alternate;
 }
 
@@ -34,6 +34,7 @@
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(10px);
   }
@@ -44,8 +45,7 @@
   box-shadow: 0 0 12px rgb(252, 234, 234);
   border-radius: 50%;
   padding: 10px;
-  margin-top: 80px;
-  margin-right: 25px;
+  margin-top: 200%;
 }
 
 .sideLinkArrow:hover {
@@ -54,4 +54,76 @@
 
 body {
   background: var(--body-color);
+}
+
+@media screen and (max-width: 450px) {
+  .SideLinks{
+    margin-top: 35%;
+  }
+
+  .icon {
+    margin: 2% 0px 8% 19%;
+  }
+
+  .sideLinkArrow {
+    margin-top: 150%;
+  }
+}
+
+@media screen and (width: 320px) {
+  .SideLinks{
+    margin-top: 30%;
+    margin-right: 0;
+  }
+
+  .icon {
+    margin: 2% 0px 12% 19%;
+  }
+
+  .sideLinkArrow {
+    margin-top: 98%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .SideLinks{
+    margin-top: 10%;
+    margin-right: 8%;
+  }
+
+  .icon {
+    width: 78px;
+    height: 78px;
+    margin: 12% 0px 25% 0%;
+  }
+
+  .sideLinkArrow {
+    margin-top: 120%;
+    padding: 10px;
+  }
+
+  #cusor{
+    height: 68px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .SideLinks{
+    margin-top: 3%;
+    margin-right: 6%;
+  }
+
+  .icon {
+    width: 58px;
+    height: 58px;
+    margin: 5% 0px 15% 10%;
+  }
+
+  .sideLinkArrow {
+    margin-top: 145%;
+  }
+
+  #cusor{
+    height: 38px;
+  }
 }
