--- a/src/Pages/Home/Footer/Footer.css
+++ b/src/Pages/Home/Footer/Footer.css
@@ -28,7 +28,7 @@
 
 .subscribe-header {
   text-align: center;
-  margin: 65px auto 15px auto;
+  margin: 45px auto 15px auto;
 }
 
 .newsletter {
@@ -56,6 +56,10 @@
   left: 60.9%;
 }
 
+#send:hover {
+  cursor: pointer;
+}
+
 #copyright {
   padding: 5px;
   margin-top: 10px;
@@ -74,7 +78,92 @@
   float: right;
 }
 
+.f-r, p {
+  margin: 4px 0;
+}
 .link:hover {
   cursor: pointer;
   color: rgb(250, 90, 90);
 }
+
+@media screen and (width: 320px){
+  .logos {
+    height: 100px;
+    width: 250px;
+  }
+
+  .subscribe-header {
+    margin: 45px auto 15px auto;
+    font-size: 18px;
+  }
+
+  .newsletter {
+    margin: 0 25% 65px 2%;
+  }
+
+  #send {
+    left: 64%;
+  }
+
+  .f-r {
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .title{
+    font-size: 2.8em;
+  }
+
+  .logos {
+    height: 120px;
+    width: 380px;
+  }
+
+  .subscribe-header {
+    margin: 35px auto 15px auto;
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+
+  .newsletter {
+    margin: 0 25% 65px 3%;
+  }
+
+  #mail {
+    min-width: 65%;
+  }
+
+  #send {
+    left: 74%;
+    line-height: 14px;
+  }
+
+  .f-r {
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .subscribe-header {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .newsletter {
+    margin: 0 20% 65px 35%;
+  }
+
+  #mail {
+    width: 25%;
+  }
+
+  #send {
+    left: 60%;
+  }
+}
+
