--- a/src/Pages/Home/Footer/Footer.css
+++ b/src/Pages/Home/Footer/Footer.css
@@ -40,7 +40,7 @@
   position: absolute;
   padding: 10px;
   min-width: 25%;
-  border: 1px solid  #333333;
+  border: 1px solid  #333;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -48,9 +48,9 @@
 #send {
   position: absolute;
   padding: 10px;
-  background: #32E0C4;
+  background: #32e0c4;
   color: #fff;
-  border: 2px solid #32E0C4;
+  border: 2px solid #32e0c4;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   left: 60.9%;
@@ -66,7 +66,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
 .link {
@@ -78,7 +78,8 @@
   float: right;
 }
 
-.f-r, p {
+.f-r, 
+p {
   margin: 4px 0;
 }
 .link:hover {
@@ -86,7 +87,7 @@
   color: rgb(250, 90, 90);
 }
 
-@media screen and (width: 320px){
+@media screen and (width: 320px) {
   .logos {
     height: 100px;
     width: 250px;
@@ -113,7 +114,7 @@
 }
 
 @media screen and (max-width: 450px) {
-  .title{
+  .title {
     font-size: 2.8em;
   }
 
