--- a/src/Pages/Settings/Settings.css
+++ b/src/Pages/Settings/Settings.css
@@ -11,7 +11,7 @@
 .optContainer {
   margin-top: 3%;
   display: grid;
-  grid-template: (1fr)/(4,1fr);
+  grid-template: (1fr)/(4, 1fr);
   grid-gap: 1px;
   grid-template-areas: "op set1 set1 set1";
 }
