--- a/src/Pages/Transactions/Transactions.css
+++ b/src/Pages/Transactions/Transactions.css
@@ -1,3 +1,237 @@
 body {
     background: var(--body-color);
 }
+
+.transactionsPage {
+    display: flex;
+    align-content: center;
+    padding: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+}
+
+.gridContainer {
+    display: grid;
+    height: 500px;
+    grid-template-columns: 350px 350px;
+    grid-template-rows: 30% auto;
+    padding: 40px;
+    grid-gap: 40px;
+    column-gap: 50px;
+}
+
+.grid-col1 {
+    place-self: center;
+    justify-self: start;
+}
+
+.grid-col1 h3 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 30px;
+    color: #04172A;
+}
+
+.grid-col1 .todayDate {
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 22px;
+    color: #000000;
+}
+
+.grid-col2 {
+    place-self: center;
+    justify-self: end;
+}
+
+.grid-col2 button {
+    width: 150px;
+    height: 40px;
+    background: #32E0C4;
+    border: 1px solid #32E0C4;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 23px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+}
+
+.grid-col3 .gridBox {
+    display: grid;
+    grid-template-columns: 45% 10% 45%;
+    grid-auto-rows: 50px 100px;
+    width: 345px;
+    height: 191px;
+    background: rgba(118, 234, 215, 0.1);
+    border-radius: 10px;
+    padding: 5px;
+    column-gap: 5px;
+    row-gap: 5px;
+    justify-content: space-evenly;
+}
+
+.gridBox .box1 {
+    grid-column-start: 1;
+    grid-column-end: span col3-start;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    padding: 15px;
+    font-size: 14px;
+}
+
+.gridBox .box2, .box4 {
+    display: grid;
+    grid-template-columns: 80px 30px;
+    grid-auto-rows: 15px;
+    column-gap: 15px;
+    row-gap: 25px;
+    padding: 13px;
+    font-size: 14px;
+}
+
+.displayStartDate, .displayEndDate {
+    font-size: 12px;
+}
+
+.gridBox .box3 {
+    width: 2px;
+    height: 125px;
+    background: #C4C4C4;
+    place-self: center;
+}
+
+.grid-col4 {
+    background: rgba(118, 234, 215, 0.1);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.grid-col4 .allTransactions {
+    padding: 5px;
+}
+
+.transactionsTable {
+    border-collapse: separate;
+    width: 335px;
+}
+
+thead tr th {
+    font-size: 16px;
+}
+
+th {
+    text-align: left;
+    font-size: 12px;
+    padding: 3px;
+}
+
+.transactionSent {
+    color: #EB5757;
+    padding: 2px;
+    font-size: 12px;
+}
+
+.transactionRecieved {
+    color: #219653;
+    padding: 2px;
+    font-size: 12px;
+}
+
+.transactionFail {
+    color: #EB5757;
+    padding: 2px;
+    font-size: 12px;
+}
+
+.userName {
+    width: 100%;
+    padding: 2px;
+    font-size: 12px;
+}
+
+.date {
+    text-align: right;
+    padding: 1px;
+    font-size: 11px;
+}
+
+.noTransactions {
+    font-size: 12px;
+    text-align: center;
+}
+
+.noTransactions img {
+    width: 150px;
+}
+
+/* Media Query */
+
+@media screen and (max-width: 1040px) {
+    .transactionsPage {
+        padding: 5px;
+    }
+
+    .gridContainer {
+        grid-template-columns: 200px;
+        grid-template-rows: 10% 15% 35% 40%;
+        padding: 5px;
+        grid-column-gap: 5px;
+        grid-row-gap: 5px;
+    }
+
+    .grid-col1, .grid-col2 {
+        place-self: center;
+        justify-self: center;
+        text-align: center;
+    }
+
+    .grid-col2 button {
+        height: 25px;
+        width: 120px;
+    }
+
+    .grid-col3 .gridBox {
+        display: grid;
+        grid-template-columns: 35% 10% 35%;
+        grid-auto-rows: 40px 110px;
+        width: 260px;
+        height: 130px;
+        background: rgba(118, 234, 215, 0.1);
+        border-radius: 10px;
+        padding: 5px;
+        column-gap: 2px;
+        row-gap: 5px;
+        justify-content: space-evenly;
+    }
+
+    .gridBox .box1 {
+        padding: 5px;
+    }
+
+    .gridBox .box2, .box4 {
+        padding: 5px;
+        width: 120px;
+        grid-template-columns: 60px 20px;
+        grid-auto-rows: 15px;
+        column-gap: 5px;
+        row-gap: 20px;
+        font-size: 12px;
+    }
+
+    .gridBox .box3 {
+        margin-bottom: 50px;
+        height: 70px;
+    }
+
+    .grid-col4 {
+        width: 260px;
+    }
+
+    .grid-col4 .transactionsTable {
+        width: 250px;
+    }
+}
