--- a/src/Pages/Transactions/Transactions.css
+++ b/src/Pages/Transactions/Transactions.css
@@ -85,7 +85,8 @@ body {
     font-size: 14px;
 }
 
-.gridBox .box2, 
+.gridBox .box2,
+
 .box4 {
     display: grid;
     grid-template-columns: 80px 30px;
@@ -96,7 +97,8 @@ body {
     font-size: 14px;
 }
 
-.displayStartDate, 
+.displayStartDate,
+
 .displayEndDate {
     font-size: 12px;
 }
@@ -146,7 +148,7 @@ thead tr th {
 }
 
 .transactionFail {
-    color: #EB5757;
+    color: #eb5757;
     padding: 2px;
     font-size: 12px;
 }
@@ -178,6 +180,7 @@ thead tr th {
     .Transactions {
         padding: 5px;
     }
+
     .gridContainer {
         grid-template-columns: 200px;
         grid-template-rows: 10% 15% 35% 40%;
@@ -185,16 +188,20 @@ thead tr th {
         grid-column-gap: 5px;
         grid-row-gap: 5px;
     }
-    .grid-col1, 
+
+    .grid-col1,
+    
     .grid-col2 {
         place-self: center;
         justify-self: center;
         text-align: center;
     }
+
     .grid-col2 button {
         height: 25px;
         width: 120px;
     }
+
     .grid-col3 .gridBox {
         display: grid;
         grid-template-columns: 35% 10% 35%;
@@ -208,10 +215,14 @@ thead tr th {
         row-gap: 5px;
         justify-content: space-evenly;
     }
+
     .gridBox .box1 {
         padding: 5px;
     }
-    .gridBox .box2, .box4 {
+
+    .gridBox .box2,
+    
+    .box4 {
         padding: 5px;
         width: 120px;
         grid-template-columns: 60px 20px;
@@ -220,13 +231,16 @@ thead tr th {
         row-gap: 20px;
         font-size: 12px;
     }
+
     .gridBox .box3 {
         margin-bottom: 50px;
         height: 70px;
     }
+
     .grid-col4 {
         width: 260px;
     }
+
     .grid-col4 .transactionsTable {
         width: 250px;
     }
