--- a/src/Pages/Transactions/Transactions.css
+++ b/src/Pages/Transactions/Transactions.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     align-content: center;
     padding: 5px;
-    font-family: "Montserrat";
+    font-family: 'Montserrat';
     font-style: normal;
     width: calc(100% - 10rem);
     margin: auto;
@@ -28,7 +28,7 @@ body {
 }
 
 .grid-col1 h3 {
-    font-family: "Inter";
+    font-family: 'Inter';
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
@@ -86,7 +86,6 @@ body {
 }
 
 .gridBox .box2,
-
 .box4 {
     display: grid;
     grid-template-columns: 80px 30px;
@@ -98,7 +97,6 @@ body {
 }
 
 .displayStartDate,
-
 .displayEndDate {
     font-size: 12px;
 }
@@ -190,7 +188,6 @@ thead tr th {
     }
 
     .grid-col1,
-    
     .grid-col2 {
         place-self: center;
         justify-self: center;
