--- a/src/Pages/Transactions/Transactions.css
+++ b/src/Pages/Transactions/Transactions.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     align-content: center;
     padding: 5px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat";
     font-style: normal;
     width: calc(100% - 10rem);
     margin: auto;
@@ -28,7 +28,7 @@ body {
 }
 
 .grid-col1 h3 {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
@@ -218,7 +218,6 @@ thead tr th {
     }
 
     .gridBox .box2,
-    
     .box4 {
         padding: 5px;
         width: 120px;
