--- a/src/Pages/Wallet/Wallet.css
+++ b/src/Pages/Wallet/Wallet.css
@@ -72,9 +72,11 @@ body {
 .LastTransact {
     margin-top: 1rem;
 }
+
 .Transact {
     font-size: 0.8rem;
 }
+
 .Money {
     letter-spacing: 1px;
 }
@@ -83,6 +85,7 @@ body {
     font-size: 0.9rem;
     line-height: 1.5;
 }
+
 .ProfileCard {
     background: var(--nav-color);
     grid-column: 4/13;
@@ -108,4 +111,144 @@ body {
 .AccountType {
     position: absolute;
     bottom: -70px;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 1050px) {
+
+    .WalletBalance {
+        font-size: 1.5rem;
+    }
+
+    .WalletLink {
+        margin-top: 0.8rem;
+    }
+
+    .WalletBody {
+        grid-gap: 1rem;
+    }
+
+    .WalletCard {
+        grid-column: 1/3;
+        width: 250px;
+        height: 135px;
+    }
+
+    .WalletTrans {
+        grid-row: 3/5;
+        height: 150px;
+    }
+
+    .ProfileCard {
+        grid-column: 6/13;
+        grid-row: 1/5;
+        width: 410px;
+        height: 250px;
+    }
+
+    .LastTransact {
+        margin-top: 0.8rem;
+    }
+
+    .Transact {
+        font-size: 0.7rem;
+    }
+
+    .LastTransact .CardHeading {
+        font-size: 0.8rem;
+        line-height: 1.3;
+    }
+
+    .RepifyId {
+        line-height: 2.5;
+        font-size: 1.5rem;
+    }
+
+}
+
+@media screen and (max-width: 870px) {
+    .Wallet {
+        width: calc(100% - 5rem);
+        margin: auto;
+    }
+
+    .HeroHeading {
+        font-size: 1.2rem;
+    }
+
+    .WalletHero .SmallText {
+        font-size: 0.7rem;
+    }
+
+    .WalletBalance {
+        font-size: 1rem;
+    }
+
+    .WalletCard {
+        width: 180px;
+    }
+
+    .ProfileCard {
+        grid-row: 1/4;
+        width: 280px;
+    }
+
+    .LastTransact {
+        margin-top: 0.75rem;
+    }
+
+    .LastTransact .CardHeading {
+        font-size: 0.7rem;
+    }
+
+    .RepifyId {
+        font-size: 1rem;
+    }
+
+}
+
+@media screen and (max-width: 611px) {
+    .Wallet {
+        width: calc(100% - 3rem);
+        margin: auto;
+    }
+
+    .WalletHero {
+        display: block;
+    }
+
+    .HeroTexts {
+        margin-bottom: 2rem;
+    }
+
+    .WalletBody {
+        display: block;
+    }
+
+    .WalletCard,
+    .ProfileCard {
+        width: 100%;
+        margin-bottom: 1.5rem;
+    }
+
+    .ProfileCard {
+      height: 150px;
+    }
+
+    .CardItems {
+        padding: 1.2rem;
+    }
+
+    .ProfileCard .CardItems {
+        padding: 1.2rem;
+        letter-spacing: 1px;
+    }
+
+    .RepifyId {
+        font-size: 1rem;
+    }
+    .AccountType {
+        bottom: -50px;
+    }
 }
