--- a/src/Pages/Beneficiaries/Beneficiaries.css
+++ b/src/Pages/Beneficiaries/Beneficiaries.css
@@ -1,3 +1,177 @@
 body {
     background: var(--body-color);
 }
+
+.Beneficiaries {
+    padding: 40px;
+    font-family: Trebuchet, sans-serif;
+    font-style: normal;
+    width: calc(100% - 10rem);
+    margin: auto;
+}
+
+.grid-Container {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: 20% 20% 50%;
+    grid-column-gap: 50px;
+    grid-row-gap: 40px;
+    justify-content: center;
+    padding: 10px;
+}
+
+.pageTitle {
+    grid-column: 1 / span 2;
+    justify-self: start;
+    padding: 5px;
+    color: #4f4f4f;
+}
+
+.addBeneficiries-btn {
+    justify-self: end;
+}
+
+.addBeneficiries-btn button {
+    padding: 7px;
+    background: #32e0c4;
+    border: 2px solid #32e0c4;
+    box-sizing: border-box;
+    width: 160px;
+    height: 40px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 23px;
+    text-transform: capitalize;
+    color: #fff;
+}
+
+.totalBeneficiaries, .awaitingRequest, .scheduledExpenses {
+    align-self: center;
+    background-color: cornsilk;
+    padding: 20px;
+    background: rgba(118, 234, 215, 0.05);
+    border-radius: 8px;
+    color: #4f4f4f;
+}
+
+.beneficiariesTableWrapper {
+    grid-column: 1 / span 3;
+    background: rgba(118, 234, 215, 0.08);
+    border-radius: 5px;
+    height: auto;
+}
+
+.beneficiariesTable {
+    width: 100%;
+    padding: 20px;
+    text-align: left;
+    font-weight: 12px;
+    font-size: 14px;
+    color: #4f4f4f;
+}
+
+.beneficiariesTable thead th {
+    padding: 15px;
+}
+
+.beneficiariesTableBody {
+    text-align: left;
+}
+
+.beneficiariesTableRows {
+    border: 1px solid #e7eaec;
+    box-shadow: 0 0 0 1px rgb(243, 244, 247);
+}
+
+.beneficiariesTableRows td {
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.indicator {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+}
+
+.flexWrapper {
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.flexWrapper div {
+    padding-top: 60px;
+    text-align: center;
+    width: 27%;
+}
+
+.flexWrapper div h6 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+}
+
+.flexWrapper div .space {
+    padding: 16px;
+}
+
+.flexWrapper div button {
+    background: #32e0c4;
+    border: 1px solid #32e0c4;
+    box-sizing: border-box;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+}
+
+/* Media Query*/
+
+@media screen and (max-width: 1040px) {
+    .Beneficiaries {
+        width: auto;
+        justify-items: left;
+        justify-content: left;
+        padding-left: 3px;
+    }
+    .grid-Container {
+        column-gap: 15px;
+        row-gap: 35px;
+        width: 340px;
+    }
+    .beneficiariesTable {
+        font-weight: 11px;
+        font-size: 10px;
+        padding: 5px
+    }
+    .beneficiariesTable thead th {
+        padding: 5px;
+        font-size: 11px;
+    }
+    .beneficiariesTableRows td {
+        padding: 5px;
+        font-size: 11px;
+        text-align: left;
+    }
+    .indicator {
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+    }
+    .flexWrapper {
+        justify-content: space-evenly;
+        padding: 5px;
+    }
+    .flexWrapper div {
+        display: none;
+    }
+    .flexWrapper div .space {
+        padding: 10px;
+    }
+}
