--- a/src/Pages/Settings/HelpSupport/HelpSupport.css
+++ b/src/Pages/Settings/HelpSupport/HelpSupport.css
@@ -10,6 +10,10 @@
   padding: 5px;
 }
 
+textarea {
+  max-width: 350px;
+}
+
 .inputData {
   border-left-style: none;
   border-right-style: hidden;
