--- a/src/Pages/Wallet/Wallet.css
+++ b/src/Pages/Wallet/Wallet.css
@@ -229,7 +229,7 @@ body {
     .WalletCard,
     .ProfileCard {
         width: 100%;
-        margin-bottom: 1.5rem;
+        margin-top: 1.5rem;
     }
 
     .ProfileCard {
