--- a/src/Pages/Beneficiaries/Beneficiaries.css
+++ b/src/Pages/Beneficiaries/Beneficiaries.css
@@ -45,9 +45,10 @@ body {
     color: #fff;
 }
 
-.totalBeneficiaries, .awaitingRequest, .scheduledExpenses {
+.totalBeneficiaries,
+.awaitingRequest,
+.scheduledExpenses {
     align-self: center;
-    background-color: cornsilk;
     padding: 20px;
     background: rgba(118, 234, 215, 0.05);
     border-radius: 8px;
@@ -88,7 +89,6 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0em;
     text-align: left;
 }
 
@@ -131,47 +131,57 @@ body {
     font-weight: bold;
 }
 
-/* Media Query*/
+/* Media Query */
 
 @media screen and (max-width: 1040px) {
+
     .Beneficiaries {
         width: auto;
         justify-items: left;
         justify-content: left;
         padding-left: 3px;
     }
+
     .grid-Container {
         column-gap: 15px;
         row-gap: 35px;
         width: 340px;
     }
+
     .beneficiariesTable {
         font-weight: 11px;
         font-size: 10px;
-        padding: 5px
+        padding: 5px;
     }
+
     .beneficiariesTable thead th {
         padding: 5px;
         font-size: 11px;
     }
+
     .beneficiariesTableRows td {
         padding: 5px;
         font-size: 11px;
         text-align: left;
     }
+
     .indicator {
         width: 14px;
         height: 14px;
         border-radius: 50%;
     }
+
     .flexWrapper {
         justify-content: space-evenly;
         padding: 5px;
     }
+
     .flexWrapper div {
         display: none;
     }
+
     .flexWrapper div .space {
         padding: 10px;
     }
+
 }
