--- a/src/Pages/Dashboard/DashboardNavBars.css
+++ b/src/Pages/Dashboard/DashboardNavBars.css
@@ -53,19 +53,23 @@
 
     background: var(--nav-color);
     width: var(--side-width);
-    min-height: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
 .SlideNav {
     width: 70%;
     /* height: 50vh; */
-    padding-top: 30%;
+    padding-top: 50%;
     margin: auto;
 }
 
 .SideList {
-    padding-top: 2.5rem;
+    padding-top: 2rem;
+}
+
+.SideList .NavLink {
+    font-size: 1rem;
 }
 
 .NavLink {
@@ -149,7 +153,7 @@
     }
 
     .SlideLogo {
-        padding-top: 30%;
+        padding-top: 20%;
     }
 
 }
