Resolved the login and signup component route and fixed the settings components

--- a/src/Components/Login-SignUp/Login-SignUp.css
+++ b/src/Components/Login-SignUp/Login-SignUp.css
@@ -40,6 +40,8 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 5px #a8a7a7;
   cursor: pointer;
+  text-decoration: none;
+  text-align: center;
 }
 
 .linkWrap {
