--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -8,7 +8,7 @@ body {
 
 .MainBody {
     width: 100%;
-    margin: auto;
+    margin: 2rem auto;
     padding-top: 2rem;
     /* overflow-x: hidden; */
 }
