--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -1,3 +1,153 @@
 body {
     background: var(--body-color);
 }
+
+.Profile {
+    width: calc(100% - 10rem);
+    margin: auto;
+}
+
+.ProfileBody {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1.5rem;
+}
+
+.Link {
+    font-size: var(--link-size);
+    text-decoration: none;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ProfileSection {
+    background: var(--nav-color);
+    width: 40%;
+    padding: 1.5rem;
+}
+
+.ProfileImg img {
+    width: 180px;
+    height: 180px;
+    border-radius: 100%;
+    display: block;
+    margin: auto;
+}
+
+.ProfileName {
+    font-size: 1.2rem;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+.separator {
+    width: 85%;
+    margin: 1rem auto;
+    border: none;
+    border-top: 1px solid #E7EAEC;
+}
+
+.ProfileContact {
+    width: 70%;
+    margin: auto;
+}
+
+.ProfileContact p {
+    font-size: 13px;
+    color: #4C5059;
+    text-align: left;
+    margin: 0.3rem auto;
+}
+
+.innerText {
+    padding-left: 0.6rem;
+}
+
+.ProfileBody .Edit {
+    width: 200px;
+    height: 30px;
+    background: var(--primary-color);
+    color: #fff;
+    text-align: center;
+    padding-top: 13px;
+}
+
+.ProfileGrid {
+    width: 47%;
+}
+
+.UserIDCard {
+    background: var(--nav-color);
+    border-radius: 15px;
+    padding: 1.5rem 1.5rem 0.8rem;
+}
+
+.Tags {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.CopyText {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+.RepifyId {
+    letter-spacing: 2px;
+}
+
+.gridCards {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.EarningsCard {
+    width: 40%;
+    background: var(--nav-color);
+    border-radius: 15px;
+    padding: 1rem 1rem 0.4rem;
+}
+
+.EarnTotal, .EarningIncome {
+    margin: 0.7rem 0;
+}
+
+.EarnTitle,
+.EarningIncome {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ProfileBody .Edit {
+    background: var(--primary-color);
+    padding: 0.4rem 0.8rem;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.SeeLink {
+    font-size: 0.8rem;
+    text-decoration: none;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.ProfileBody .See {
+    /* width: 70px;
+    height: 20px; */
+    background: var(--primary-color);
+    padding: 0.4rem 0.8rem;
+    color: #fff;
+    border-radius: 3px;
+    text-align: center;
+}
