--- a/src/Pages/Home/About/About.css
+++ b/src/Pages/Home/About/About.css
@@ -1,11 +1,11 @@
-#About {
+:root {
     --about-bg: #f7ffff;
+}
 
+#About {
     background: var(--about-bg);
     width: 100%;
-    height: 100vh;
-    max-height: 100vh;
-    overflow: hidden;
+    height: 100%;
 }
 
 .PColor {
@@ -16,10 +16,14 @@
     font-weight: bold;
 }
 
+.Top {
+    margin-bottom: 2rem;
+}
+
 .AboutWrapper {
     width: 80%;
     margin: auto;
-    margin-top: 5%;
+    padding-top: 5%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
