updated the about services component

--- a/src/Pages/Help/AboutServices.css
+++ b/src/Pages/Help/AboutServices.css
@@ -1,18 +1,11 @@
-.helpContent {
-    padding-top: 50px;
+.aboutServices {
     background: rgb(246, 252, 252);
 }
 
-.helpContent h1 {
-    font-family: Trebuchet, sans-serif;
-    font-weight: bold;
-    font-size: 5vw;
-    line-height: 132.4%;
-    text-align: center;
-    text-transform: capitalize;
-    color: rgb(90, 89, 89);
-    padding-top: 35px;
-    padding-bottom: 35px;
+.bodyContainer {
+    padding-top: 50px;
+    background: white;
+    margin-top: 10px;
 }
 
 .dummy {
@@ -21,11 +14,9 @@
 
 .section {
     margin: auto;
-    width: 70%;
-    border: 1.5px solid rgba(231, 235, 227, 0.945);
+    width: 60%;
+    border: 2px solid rgba(231, 235, 227, 0.945);
     padding: 40px;
-    border-radius: 12px;
-    box-shadow: inset 0 0 14px rgb(226, 235, 241);
 }
 
 .section h2 {
@@ -34,6 +25,7 @@
     color: rgb(90, 89, 89);
     padding-top: 10px;
     padding-bottom: 20px;
+    text-align: center;
 }
 
 .imageContainer {
@@ -55,4 +47,14 @@
     line-height: 132.4%;
     color: #524d4d;
     text-align: justify;
+}
+
+/* MEDIA QUERY */
+
+@media screen and (max-width:1040px) {
+
+    .section p {
+        padding: 5px 5px;
+        text-align: justify;
+    }
 }
