--- a/src/Pages/Wallet/FundWallet/Fund.css
+++ b/src/Pages/Wallet/FundWallet/Fund.css
@@ -14,6 +14,14 @@ textarea:focus, input:focus{
     outline: none;
 }
 
+.DisplayBlock {
+    display: block;
+}
+
+.DisplayNone {
+    display: none;
+}
+
 .Fund {
     position: fixed;
     top: 0;
@@ -21,6 +29,7 @@ textarea:focus, input:focus{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 3000000;
 }
 
 .Box {
@@ -47,6 +56,7 @@ textarea:focus, input:focus{
 
 .CloseIcon {
     font-size: 1.5rem;
+    cursor: pointer;
 }
 
 .FundInput {
@@ -55,38 +65,44 @@ textarea:focus, input:focus{
 }
 
 .PlaceHolder {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
+    font-weight: bolder;
     text-transform: uppercase;
-    opacity: 0.7;
+    opacity: 0.6;
 }
 
 .FundAmount {
     width: 100%;
     height: 2rem;
-    margin: 0.8rem auto 1.2rem;
+    margin: 0.5rem auto 1.2rem;
     border: none;
     border-bottom: 1px solid var(--primary-color);
     font-size: 1.3rem;
     font-weight: bold;
 }
 
-.BtnDiv {
+.FundBtn {
+    display: block;
     width: 90%;
     margin: auto;
-    height: 2rem;
+    height: 2.2rem;
     background: var(--primary-color);
-    padding: 0.5rem;
+    padding: 0.6rem;
     text-align: center;
     cursor: pointer;
+    border: none;
     border-radius: 0.5rem;
+    color: #fff;
+    font-weight: bolder;
+    font-size: 0.96rem;
 }
 
-.BtnDiv:hover {
+.FundBtn:focus, .FundBtn:active {
+    border: none;
+    outline: none;
+}
+
+.FundBtn:hover {
     background: var(--primary-color);
     opacity: 0.5;
-}
-
-.FoundBtn {
-    color: #fff;
-    padding-top: 0.3rem;
 }
