--- a/src/Components/Login-SignUp/Login-SignUp.css
+++ b/src/Components/Login-SignUp/Login-SignUp.css
@@ -102,6 +102,12 @@ span.policy {
   margin: 2px;
 }
 
+.signupForm select {
+  width: 98%;
+  padding: 8px;
+  margin: 2px;
+}
+
 #signupBtn {
   width: 200px;
   padding: 15px;
@@ -121,7 +127,7 @@ span.policy {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.753);
+  background: rgba(0, 0, 0, 0.671);
   display: block;
 }
 
